add the asset settings

--- a/Weather/Views/Home/Index.cshtml
+++ b/Weather/Views/Home/Index.cshtml
@@ -1,15 +1,15 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@model Weather.Models.WebpackSetting
 
 
-
-<link type="text/css" href="~/Dist/app.css" rel="stylesheet" />
+<link type="text/css" href='@Url.Content("~/Dist" + Model.App.Css)' rel="stylesheet" />
 
 <div id="app" style="height: 100%"></div>
 
-<script type="text/javascript" src="~/Dist/vendor.js"></script>
-<script type="text/javascript" src="~/Dist/app.js"></script>
+<script type="text/javascript" src='@Url.Content("~/Dist"+ Model.Vendor.Js)'></script>
+<script type="text/javascript" src='@Url.Content("~/Dist"+ Model.App.Js)'></script>
 
 
 
